Add heap inspection, local variable reading, and method timing
Three new capabilities that unlock common production debugging scenarios:

- JDIScript.instanceCount(className): count live instances in the target VM
- JDIScript.findInstances(className, maxCount): retrieve ObjectReferences for
  live instances, enabling state inspection without heap dumps
- JDIScript.onMethodTimed(className, methodName, BiConsumer<entry, durationMs>):
  entry+exit pairing in one call — eliminates the 10-line
  onMethodInvocation + onCurrentMethodExitUnchecked boilerplate
- RemoteObject.localVar(thread, name): read a named local variable by name
- RemoteObject.locals(thread): read all visible locals as Map<String, String>

Also adds:
- HeapInspector example demonstrating all three new patterns together
- Updated skill docs (SKILL.md, api-reference.md, examples.md) with new
  patterns and production-oriented recipes (slow-call detection, instance
  counting, local variable inspection)
- Rewritten TODO.md with concrete strategic roadmap: production examples
  (Slow Request Tracer, Bean Init Profiler, Connection Leak Detector),
  remaining ergonomics gaps, and agentic tooling direction

https://claude.ai/code/session_01Dngc2hsmxeUf1jsefGMWKE